Mostly fixed spacing on index page for github content

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -7462,7 +7462,7 @@ nav {
 
 .github-commit {
   padding: 14px 0;
-  height: 36px;
+  height: 64px;
   line-height: 36px;
   background-color: #5c5757;
   color: #e6e6e6;
